--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
+    <title>Специалист по Детской Реабилитации</title>
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <meta name="description" content="Специалист по Детской Реабилитации Шайморданова Алеся Равильевна Самара, Войта и Бобат-терапии Самара, Афк самара, Детский массаж самара ">
+    <meta name="keywords" content="Специалист по Детской Реабилитации Самара, Шайморданова Алеся Равильевна, услуги, Войта и Бобат-терапии Самара, Афк самара, Детский массаж самара, Нейропсихолог самара, Сенсорная интеграция Самара">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,7 +13,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
-    <title>Специалист по Детской Реабилитации</title>
   </head>
   <body>
     <div id="root"></div>
